[tool.poetry]
name = "personal-site-backend"
version = "1.0.0"
description = "Backend microservice for my personal website"
authors = ["Matthew Gleich <matthewgleich@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6 <4.0"
firebase_admin = "^4.2.0"
stravalib = "^0.10.2"
requests = "^2.23.0"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
